--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axe-core": "^4.10.3",
     "axe-puppeteer": "^1.1.1",
     "boxen": "^5.1.2",
     "chalk": "^4.1.2",
@@ -17,7 +18,7 @@
     "figlet": "^1.8.2",
     "gradient-string": "^1.2.0",
     "inquirer": "^8.2.6",
-    "open": "^10.2.0",
+    "open": "^8.4.2",
     "ora": "^5.4.1",
     "playwright": "^1.54.1",
     "puppeteer": "^24.15.0",
